Estructura proyecto angular ionic & creacion componente nav

--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,19 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
+
+
+/*body {
+    background-color: var(--ion-color-background) !important;
+    color: white;
+  }
+
+@media (prefers-color-scheme: dark) {
+    html, body, ion-app {
+      background-color: var(--ion-color-background) !important;
+      color: white;
+    }
+  }*/
+
+
+  
