--- a/src/app/pages/inicio-sesion/inicio-sesion.page.html
+++ b/src/app/pages/inicio-sesion/inicio-sesion.page.html
@@ -21,8 +21,9 @@
       </form>
   
       <p class="register-link">
-        ¿No tienes cuenta? <a routerLink="/register">Regístrate</a>
+        ¿No tienes cuenta? <a routerLink="/registrarse">Regístrate</a>
       </p>
+      
     </div>
   </ion-content>
   
