--- a/frontend/src/app/pages/inicio-sesion/inicio-sesion.page.html
+++ b/frontend/src/app/pages/inicio-sesion/inicio-sesion.page.html
@@ -1,29 +1,31 @@
 <ion-content class="ion-padding login-page">
-    <div class="login-container">
-      <div class="logo-section">
-        <img src="assets/Logo.png" alt="Logo de Reseñas" class="logo" />
-        <h2>Los numero 1 en<br />Reseñas!</h2>
-      </div>
-  
-      <form (submit)="onLogin()">
-        <ion-item>
-          <ion-label position="floating">Nombre de usuario</ion-label>
-          <ion-input type="text" [(ngModel)]="username" name="username" required></ion-input>
-        </ion-item>
-  
-        <ion-item>
-          <ion-label position="floating">Contraseña</ion-label>
-          <ion-input [type]="showPassword ? 'text' : 'password'" [(ngModel)]="password" name="password" required></ion-input>
-          <ion-icon slot="end" name="eye" (click)="togglePasswordVisibility()"></ion-icon>
-        </ion-item>
-  
-        <ion-button expand="block" type="submit" class="login-button">Iniciar Sesión</ion-button>
-      </form>
-  
-      <p class="register-link">
-        ¿No tienes cuenta? <a routerLink="/registrarse">Regístrate</a>
-      </p>
-      
+  <div class="login-container">
+    <div class="logo-section">
+      <img src="assets/Logo.png" alt="Logo de Reseñas" class="logo" />
+      <h2>Los numero 1 en<br />Reseñas!</h2>
     </div>
-  </ion-content>
-  
+
+    <form (submit)="onLogin()">
+      <ion-item>
+        <ion-label position="floating">Nombre de usuario</ion-label>
+        <ion-input type="text" [(ngModel)]="username" name="username" required></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Contraseña</ion-label>
+        <ion-input [type]="showPassword ? 'text' : 'password'" [(ngModel)]="password" name="password" required></ion-input>
+        <ion-icon slot="end" name="eye" (click)="togglePasswordVisibility()"></ion-icon>
+      </ion-item>
+
+      <ion-button expand="block" type="submit" class="login-button">Iniciar Sesión</ion-button>
+    </form>
+
+    <p class="register-link">
+      ¿No tienes cuenta? <a routerLink="/registrarse">Regístrate</a>
+    </p>
+
+    <!-- Mensaje visible si existe -->
+    <p *ngIf="mensaje" [ngClass]="mensajeColor" class="mensaje">{{ mensaje }}</p>
+
+  </div>
+</ion-content>
