--- a/frontend/src/app/pages/peliculas/peliculas.page.html
+++ b/frontend/src/app/pages/peliculas/peliculas.page.html
@@ -16,9 +16,9 @@
 </div>
 
   <div class="grid">
-    <div class="card" *ngFor="let pelicula of peliculas">
-      <img [src]="'https://image.tmdb.org/t/p/w300' + pelicula.poster_path" alt="{{pelicula.title}}">
-      <div class="title">{{ pelicula.title }}</div>
+    <div class="card" *ngFor="let pelicula of peliculas" (click)="verDetalle(pelicula.id)">
+        <img [src]="'https://image.tmdb.org/t/p/w300' + pelicula.poster_path" alt="{{pelicula.title}}">
+        <div class="title">{{ pelicula.title }}</div>
     </div>
   </div>
 </ion-content>
