--- a/frontend/src/app/pages/pelicula/pelicula.page.scss
+++ b/frontend/src/app/pages/pelicula/pelicula.page.scss
@@ -5,7 +5,7 @@
 
 .banner {
   width: 100%;
-  height: 300px; /* o el alto que prefieras */
+  height: 300px;
   border-radius: 8px;
   margin-bottom: 1rem;
 
@@ -13,24 +13,28 @@
   background-position: center;
   background-repeat: no-repeat;
 
-  /* Opcional: para un efecto oscuro y mejorar el contraste del texto */
   position: relative;
   overflow: hidden;
+
+  cursor: pointer;
+  transition: all 0.3s ease;
 }
 
 .banner::before {
   content: "";
   position: absolute;
   inset: 0;
-  background: rgba(0, 0, 0, 0.4); /* capa oscura encima del fondo */
+  background: rgba(0, 0, 0, 0.4);
   border-radius: 8px;
   pointer-events: none;
 }
 
-
-
-
-
+.banner.expandido {
+  height: auto;
+  aspect-ratio: 16 / 9;
+  z-index: 10;
+  border-radius: 8px;
+}
 
 .info {
   display: flex;
@@ -43,6 +47,7 @@
   width: 500px;
   border-radius: 8px;
 }
+
 .video-container {
   aspect-ratio: 16 / 9;
   width: 100%;
