--- a/frontend/src/app/pages/pelicula/pelicula.page.scss
+++ b/frontend/src/app/pages/pelicula/pelicula.page.scss
@@ -61,3 +61,14 @@
   height: 100%;
   border: 0;
 }
+
+.resenas-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  h2 {
+    margin: 0;
+  }
+}
+
