--- a/frontend/src/app/pages/perfil/perfil.page.html
+++ b/frontend/src/app/pages/perfil/perfil.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>perfil</ion-title>
+    <ion-title>Perfil</ion-title>
   </ion-toolbar>
 </ion-header>
 
