--- a/frontend/src/app/pages/pelicula/pelicula.page.html
+++ b/frontend/src/app/pages/pelicula/pelicula.page.html
@@ -21,9 +21,10 @@
         <p>{{ pelicula.overview }}</p>
         <p><strong>Rating:</strong> {{ pelicula.vote_average }}</p>
       </div>
-      <div *ngIf="isLoggedIn" (click)="toggleFavorito()" style="cursor:pointer; font-size: 48px; color: red;">
+      <div *ngIf="isLoggedIn" (click)="toggleFavorito()" class="icono-favorito">
         <ion-icon [name]="esFavorito ? 'heart' : 'heart-outline'"></ion-icon>
       </div>
+
     </div>
 
 
