--- a/frontend/src/app/pages/pelicula/pelicula.page.scss
+++ b/frontend/src/app/pages/pelicula/pelicula.page.scss
@@ -3,6 +3,13 @@
   color: #fff;
 }
 
+.icono-favorito {
+  cursor: pointer;
+  font-size: 48px;
+  color: red;
+}
+
+
 .banner {
   width: 100%;
   height: 300px;
