--- a/frontend/src/app/pages/resenas/resenas.page.scss
+++ b/frontend/src/app/pages/resenas/resenas.page.scss
@@ -14,27 +14,27 @@ ion-content.resenas-page {
     width: 1200px;
     height: 200px;
     margin: 10px auto;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.7);
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.7);
     border-radius: 8px;
     overflow: hidden;
     background-color: #2a2a2a;
     cursor: default;
-    align-items: stretch; //magen se ajusta a la altura 
+    align-items: stretch;
 
     .caratula {
       width: 140px;
-      height: 100%;//altura completa de la tarjeta 
+      height: 100%;
       object-fit: cover;
       border-top-left-radius: 8px;
       border-bottom-left-radius: 8px;
-      margin: 0; 
-      display: block; 
-      flex-shrink: 0; 
+      margin: 0;
+      display: block;
+      flex-shrink: 0;
     }
 
     .info-resena {
       flex: 1;
-      padding: 10px 15px; 
+      padding: 10px 15px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -55,15 +55,27 @@ ion-content.resenas-page {
           text-overflow: ellipsis;
         }
 
-        .anio, .categoria, .estrellas, .usuario {
+        .anio,
+        .categoria,
+        .estrellas,
+        .usuario {
           font-size: 14px;
           color: #bbb;
           white-space: nowrap;
         }
 
         .estrellas {
-          color: #ffd700;
-          font-weight: bold;
+          display: flex;
+
+          ion-icon {
+            cursor: default;
+            margin-right: 0.25rem;
+            color: #555;
+
+            &.filled {
+              color: #ffd700;
+            }
+          }
         }
 
         .usuario {
