--- a/frontend/src/app/pages/perfil/perfil.page.html
+++ b/frontend/src/app/pages/perfil/perfil.page.html
@@ -4,10 +4,58 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">perfil</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content *ngIf="!cargando" class="perfil-content">
+
+  <!-- PERFIL -->
+  <section class="card perfil-card">
+    <ion-avatar slot="start">
+      <img [src]="perfil?.foto_url || 'assets/img/default-avatar.png'" />
+    </ion-avatar>
+    <div class="info">
+      <h2>{{ perfil?.nombre_usuario }}</h2>
+      <p>{{ perfil?.descripcion }}</p>
+    </div>
+  </section>
+
+  <!-- FAVORITOS -->
+  <section class="card favoritos-card">
+    <h3>Favoritos</h3>
+    <div class="pelis-wrapper" *ngIf="favoritos.length; else sinFavs">
+      <div class="peli" *ngFor="let peli of favoritos">
+        <img
+          [src]="'https://image.tmdb.org/t/p/w185' + peli.poster_path"
+          [alt]="peli.title"
+        />
+        <span>{{ peli.title }}</span>
+      </div>
+    </div>
+    <ng-template #sinFavs>
+      <p>Sin películas favoritas aún.</p>
+    </ng-template>
+  </section>
+
+  <!-- ESTADÍSTICAS -->
+  <section class="card stats-card" *ngIf="stats">
+    <div class="stat">
+      <span class="numero">{{ stats.favoritos }}</span>
+      <span class="label">Favoritos</span>
+    </div>
+    <div class="stat">
+      <span class="numero">{{ stats.comentarios }}</span>
+      <span class="label">Comentarios</span>
+    </div>
+    <div class="stat">
+      <span class="numero">{{ stats.seguidores }}</span>
+      <span class="label">Seguidores</span>
+    </div>
+    <div class="stat">
+      <span class="numero">{{ stats.siguiendo }}</span>
+      <span class="label">Siguiendo</span>
+    </div>
+    <div class="stat">
+      <span class="numero">{{ stats.resenas }}</span>
+      <span class="label">Reseñas</span>
+    </div>
+  </section>
+
 </ion-content>
