pagina perfil con redireccionamiento desde header y pagina reseñas

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -9,7 +9,8 @@
       <!-- Enlaces de navegación -->
       <nav class="nav-links">
         <a *ngIf="!isLoggedIn" routerLink="/inicio-sesion">INICIAR SESIÓN</a>
-        <a *ngIf="isLoggedIn" routerLink="/perfil">IR A MI PERFIL</a>
+
+        <a *ngIf="isLoggedIn" [routerLink]="['/perfil', usuarioNombre]">IR A MI PERFIL</a>
 
         <a routerLink="/peliculas">PELÍCULAS</a>
         <a routerLink="/resenas">RESEÑAS</a>
