--- a/frontend/src/app/pages/perfil/perfil.page.html
+++ b/frontend/src/app/pages/perfil/perfil.page.html
@@ -42,6 +42,8 @@
         <img
           [src]="'https://image.tmdb.org/t/p/w185' + peli.poster_path"
           [alt]="peli.title"
+          (click)="irAPelicula(peli.id)"
+          style="cursor: pointer;"
         />
         <span>{{ peli.title }}</span>
       </div>
