--- a/frontend/src/app/pages/pelicula/pelicula.page.scss
+++ b/frontend/src/app/pages/pelicula/pelicula.page.scss
@@ -9,20 +9,16 @@
   color: red;
 }
 
-
 .banner {
   width: 100%;
   height: 300px;
   border-radius: 8px;
   margin-bottom: 1rem;
-
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-
   position: relative;
   overflow: hidden;
-
   cursor: pointer;
   transition: all 0.3s ease;
 }
@@ -51,7 +47,7 @@
 }
 
 .poster {
-  width: 500px;
+  width: 200px;
   border-radius: 8px;
 }
 
@@ -79,3 +75,64 @@
   }
 }
 
+.resenas {
+  .resena {
+    background-color: #2a2a2a;
+    border-radius: 8px;
+    padding: 15px;
+    margin-bottom: 10px;
+
+    .resena-meta {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .usuario {
+        font-style: italic;
+        color: #aaa;
+      }
+
+      .estrellas {
+        display: flex;
+
+        ion-icon {
+          margin-right: 0.25rem;
+          color: #555;
+
+          &.filled {
+            color: #ffd700;
+          }
+        }
+      }
+    }
+
+    .comentario {
+      font-size: 16px;
+      color: #ddd;
+      margin-top: 8px;
+      cursor: pointer;
+
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 3;
+      overflow: hidden;
+      max-height: 72px;
+
+      transition: max-height 0.3s ease;
+    }
+
+    .comentario.expandido {
+      display: block;
+      -webkit-line-clamp: unset;
+      overflow: visible;
+      max-height: 1000px;
+    }
+
+    .fecha {
+      margin-top: 8px;
+      color: #888;
+      font-size: 14px;
+      text-align: right;
+    }
+  }
+}
