--- a/frontend/src/app/pages/pelicula/pelicula.page.html
+++ b/frontend/src/app/pages/pelicula/pelicula.page.html
@@ -65,8 +65,8 @@
           <span>{{ r.created_at | date: 'short' }}</span>
         </div>
 
-        <!-- Botón like -->
-        <div *ngIf="isLoggedIn" class="like-container" (click)="toggleLikeResena(i)" title="{{ r.likedByUser ? 'Quitar like' : 'Dar like' }}">
+        <!-- Botón like sólo si la info de likes ya cargó -->
+        <div *ngIf="isLoggedIn && r.likesLoaded" class="like-container" (click)="toggleLikeResena(i)" title="{{ r.likedByUser ? 'Quitar like' : 'Dar like' }}">
           <ion-icon
             [name]="r.likedByUser ? 'heart' : 'heart-outline'"
             [class.liked]="r.likedByUser"
