--- a/frontend/src/app/pages/resenas/resenas.page.scss
+++ b/frontend/src/app/pages/resenas/resenas.page.scss
@@ -18,7 +18,6 @@ ion-content.resenas-page {
     background-color: #2a2a2a;
     cursor: default;
     align-items: stretch;
-    /* Importante quitar la altura fija para que crezca con el texto */
     height: auto;
 
     .caratula {
@@ -82,6 +81,27 @@ ion-content.resenas-page {
           margin-left: auto;
           font-style: italic;
         }
+
+        .likes {
+          display: flex;
+          align-items: center;
+          gap: 5px;
+          margin-left: 10px;
+
+          ion-icon {
+            font-size: 22px;
+            transition: transform 0.2s ease;
+          }
+
+          ion-button:hover ion-icon {
+            transform: scale(1.2);
+          }
+
+          .likes-count {
+            font-size: 14px;
+            color: #ccc;
+          }
+        }
       }
 
       .comentario {
@@ -103,7 +123,7 @@ ion-content.resenas-page {
 
         cursor: pointer;
         transition: max-height 0.3s ease;
-        max-height: 72px; /* aprox 3 líneas */
+        max-height: 72px;
       }
 
       .comentario.expandido {
@@ -111,7 +131,7 @@ ion-content.resenas-page {
         -webkit-line-clamp: unset !important;
         overflow: visible !important;
         text-overflow: unset !important;
-        max-height: 1000px; /* suficiente para mostrar todo */
+        max-height: 1000px;
       }
 
       .fechas {
@@ -128,4 +148,24 @@ ion-content.resenas-page {
       }
     }
   }
+
+  .like-container {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    margin-top: 10px;
+
+    .like-icon {
+      font-size: 24px;
+      color: #e74c3c;
+      cursor: pointer;
+    }
+
+    .likes-count {
+      font-size: 16px;
+      color: #fff;
+    }
+  }
+
+
 }
