--- a/frontend/src/app/pages/perfil/perfil.page.html
+++ b/frontend/src/app/pages/perfil/perfil.page.html
@@ -60,8 +60,8 @@
       <span class="label">Favoritos</span>
     </div>
     <div class="stat">
-      <span class="numero">{{ stats.cantidadComentarios }}</span>
-      <span class="label">Comentarios</span>
+      <span class="numero">{{ stats.cantidadLikesDado }}</span>
+      <span class="label">Likes</span>
     </div>
     <div class="stat">
       <span class="numero">{{ stats.cantidadSeguidores }}</span>
